# vsm

./: PKGBUILD  README.md  mypy.ini  pyproject.toml  vsm
.github/: issue-branch.yml
kickstart/: __init__.py  command_line.py  main.py
kickstart/logger/: __init__.py  pkg_logger.py
scripts/: project_helper.py
tests/: conftest.py
tests/unit-test/: test_pkg.py
vim_session_manager/: __init__.py  __main__.py  cli.py  manager.py  prompt.py  utils.py
vsm/: __init__.py  __main__.py  cli.py  command_line.py  log.py  main.py  session_manager.py  utils.py
