[tool.poetry]
name = "vsm"
version = "0.1.0"
description = "Poetry project set up and ready to go"
authors = ["Matt Williams <matt.k.williams@protonmail.me>"]

[tool.poetry.dependencies]
python = "^3.10.1"
rich = "^11.0.0"
halo = "^0.0.31"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
jedi = "^0.18.0"
isort = "^5.10.1"
pylint = "^2.7.2"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
drive = "vsm.main:main"
tests = "scripts.project_helper:run_tests"
stubs = "scripts.project_helper:stub_gen"
analyze = "scripts.project_helper:run_analyzer"

[build-system]
requires = ["poetry-core>=1.0.0"]

build-backend = "poetry.core.masonry.api"
